Solved the problem with dropdpwn navigation

--- a/sass/style.css
+++ b/sass/style.css
@@ -6,8 +6,8 @@
 
 /*Header*/
 header {
-  background-image: url("https://fashionbyteresa.com/cdn/shop/products/H25d74c69bd8e4d29b2df6ab74a6351edZ_5000x.jpg?v=1628434129");
-  background-size: cover;
+  background-image: url("../images/Background_Image.png");
+  max-height: 724px;
 }
 
 .navbar .navbar-brand {
@@ -25,7 +25,7 @@ header {
 .splash {
   text-align: center;
   color: #ffffff;
-  padding: 15% 0;
+  padding: 45px;
 }
 
 .splash h3 {
