--- a/sass/style.css
+++ b/sass/style.css
@@ -1,50 +1,9 @@
 /*Variable*/
 /*Global*/
-*, ::after, ::before {
-  box-sizing: border-box;
-}
-
 /*Header*/
 header {
   background-image: url("../images/Background_Image.png");
-  max-height: 724px;
-}
-
-.navbar .navbar-brand {
-  color: #fed136;
-  font-size: 26px;
-  font-family: "Pacifico", cursive;
-}
-
-.nav-link {
-  font-size: 26px;
-  padding: 0 20px;
-  margin: 0 20px;
-}
-
-.splash {
-  text-align: center;
-  color: #ffffff;
-  padding: 45px;
-}
-
-.splash h3 {
-  font-size: 40px;
-  padding-bottom: 5%;
-}
-
-.splash h1 {
-  font-size: 75px;
-  padding-bottom: 5%;
-  text-shadow: 1px 1px 2px black;
-}
-
-.splash-button {
-  background-color: #fed136;
-  border: 2px solid black;
-  border-radius: 5px;
-  font-size: 18px;
-  padding: 10px 20px;
-  color: #ffffff;
-  font-family: "Roboto Slab", serif;
+  width: 100%;
+  height: 729px;
+  background-size: cover;
 }/*# sourceMappingURL=style.css.map */
