--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,44 +8,12 @@ $font-color-light: #ffffff;
 $font-color-dark: rgb(11, 11, 11);
 
 /*Global*/
-*, ::after, ::before {
-    box-sizing: border-box;
-}
+
 /*Header*/
 header {
     background-image: url('../images/Background_Image.png');
-    max-height: 724px;
+    width: 100%;
+    height: 729px;
+    background-size: cover;
 }
-.navbar .navbar-brand {
-    color:$brand-color;
-    font-size: 26px ;
-    font-family:$font-family-1; 
-}
-.nav-link {
-    font-size: 26px;
-    padding: 0 20px; 
-    margin: 0 20px;
-}
-.splash {
-    text-align: center;
-    color: $font-color-light;
-    padding: 45px;
-}
-.splash h3{
-    font-size: 40px;
-    padding-bottom: 5% ;
-}
-.splash h1{
-    font-size: 75px;
-    padding-bottom: 5%;
-    text-shadow: 1px 1px 2px black;
-}
-.splash-button {
-    background-color: $brand-color; 
-    border: 2px solid black;
-    border-radius: 5px;
-    font-size: 18px;
-    padding: 10px 20px;
-    color: $font-color-light;
-    font-family: $font-family-4;
-}
+
