--- a/sass/style.css
+++ b/sass/style.css
@@ -1,9 +1,58 @@
 /*Variable*/
 /*Global*/
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 14px;
+  line-height: 1.7;
+  font-family: "Montserrat", sans-serif;
+}
+
+.container {
+  max-width: 1140px;
+  padding: 0 20px;
+  margin: auto;
+}
+
 /*Header*/
 header {
   background-image: url("../images/Background_Image.png");
   width: 100%;
   height: 729px;
   background-size: cover;
+}
+
+.navbar-dark .navbar-brand {
+  color: #fed136;
+  font-family: "Pacifico", cursive;
+  font-size: 26px;
+}
+
+.nav-item {
+  padding: 0 10px;
+}
+
+.splash {
+  text-align: center;
+  padding: 15%;
+}
+
+.splash h3, h1 {
+  color: #ffffff;
+  text-shadow: 2px 2px gray;
+  padding: 10px 0;
+}
+
+.splash h3 {
+  font-family: "Nunito Sans", sans-serif;
+}
+
+.splash-button {
+  background-color: #fed136;
+  color: #ffffff;
+  border: 2px solid grey;
+  border-radius: 5px;
+  padding: 10px 15px;
 }/*# sourceMappingURL=style.css.map */
