--- a/sass/style.css
+++ b/sass/style.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   max-width: 1140px;
-  padding: 0 20px;
+  padding: 60px 20px;
   margin: auto;
 }
 
@@ -42,7 +42,7 @@ header {
 .splash h3, h1 {
   color: #ffffff;
   text-shadow: 2px 2px gray;
-  padding: 10px 0;
+  padding: 35px 0;
 }
 
 .splash h3 {
@@ -55,4 +55,45 @@ header {
   border: 2px solid grey;
   border-radius: 5px;
   padding: 10px 15px;
+}
+
+/*Services*/
+.services-title {
+  text-align: center;
+  padding: 100px;
+}
+
+.services-title h2 {
+  font-size: 72px;
+}
+
+.services-title h4 {
+  color: grey;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 16px;
+}
+
+.row {
+  text-align: center;
+}
+
+.row h4 {
+  font-size: 18px;
+  padding: 10px;
+}
+
+.row p {
+  font-family: "Nunito Sans", sans-serif;
+  color: grey;
+  padding: 10px;
+}
+
+.row i {
+  color: #fed136;
+  font-size: 40px;
+  width: 68px;
+  height: 68px;
+  border: 2px solid #fed136;
+  border-radius: 50%;
+  padding: 10px;
 }/*# sourceMappingURL=style.css.map */
