--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@ $font-family-4: 'Roboto Slab', serif;
 $brand-color: #fed136;
 $font-color-light: #ffffff;
 $font-color-dark: rgb(11, 11, 11);
+$font-color-p: grey;
 
 /*Global*/
 *, *::after, *::before {
@@ -18,7 +19,7 @@ body{
 }
 .container{
     max-width: 1140px;
-    padding: 0 20px;
+    padding: 60px 20px;
     margin: auto;
 }
 /*Header*/
@@ -44,7 +45,7 @@ header {
 .splash h3, h1{
     color: $font-color-light;
     text-shadow: 2px 2px gray; 
-    padding: 10px 0;
+    padding: 35px 0;
 }
 .splash h3{
     font-family: $font-family-3;
@@ -55,4 +56,38 @@ header {
     border: 2px solid grey;
     border-radius: 5px; 
     padding: 10px 15px;
+}
+/*Services*/
+.services-title{
+    text-align: center;
+    padding: 100px;
+}
+.services-title h2{
+    font-size: 72px;
+}
+.services-title h4{
+    color: $font-color-p;
+    font-family: $font-family-3;
+    font-size: 16px;
+}
+.row{
+    text-align: center;
+}
+.row h4{
+    font-size: 18px;
+    padding: 10px;
+}
+.row p{
+    font-family: $font-family-3;
+    color: $font-color-p;
+    padding: 10px;
+}
+.row i{
+    color:$brand-color;
+    font-size: 40px;
+    width: 68px;
+    height: 68px;
+    border: 2px solid $brand-color;
+    border-radius: 50%;
+    padding: 10px;
 }
