--- a/sass/style.css
+++ b/sass/style.css
@@ -96,4 +96,38 @@ header {
   border: 2px solid #fed136;
   border-radius: 50%;
   padding: 10px;
+}
+
+/*Footer*/
+.foot-container {
+  bottom: 96px;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+}
+
+.foot-container li {
+  list-style-type: none;
+  display: inline-flex;
+}
+
+.foot-container i {
+  font-size: 30px;
+  background: rgb(11, 11, 11);
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  color: #ffffff;
+  border-radius: 50%;
+  text-align: center;
+  margin-top: auto;
+  border: 2px solid rgb(11, 11, 11);
+  border-radius: 50%;
+}
+
+.foot-container h4 {
+  font-size: 14px;
+  text-align: left;
+  color: grey;
+  left: 10%;
 }/*# sourceMappingURL=style.css.map */
