--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,3 +91,34 @@ header {
     border-radius: 50%;
     padding: 10px;
 }
+/*Footer*/
+.foot-container{
+    bottom: 96px;
+	width:100%;
+	height:60px;		
+	text-align: center; 
+}
+.foot-container li{
+    list-style-type: none;
+    display:inline-flex;
+}
+.foot-container i{
+    font-size: 30px;
+    background: $font-color-dark;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    color: $font-color-light;
+    border-radius: 50%;
+    text-align: center; 
+    margin-top: auto;
+    border: 2px solid $font-color-dark;
+    border-radius: 50%;
+}
+.foot-container h4{
+    font-size: 14px;
+    text-align: left;
+    color: $font-color-p;
+    left: 10%;
+    
+}
