--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,7 +32,8 @@ header {
 .navbar-dark .navbar-brand{
     color:$brand-color;
     font-family: $font-family-1;
-    font-size: 26px;
+    font-size: 36px;
+    margin-left: 10%
 }
 .nav-item{
     padding: 0 10px;
@@ -91,6 +92,10 @@ header {
     border-radius: 50%;
     padding: 10px;
 }
+/*Portfolio*/
+.port-row{
+     
+}
 /*Footer*/
 .foot-container{
     bottom: 96px;
@@ -117,8 +122,12 @@ header {
 }
 .foot-container h4{
     font-size: 14px;
-    text-align: left;
     color: $font-color-p;
-    left: 10%;
-    
+}
+
+@media (max-width: 768px) {
+    .services .row{
+    flex-direction: column;
+    width:100%;
+    }
 }
