--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,6 @@ body{
 }
 .container{
     max-width: 1140px;
-    padding: 60px 20px;
     margin: auto;
 }
 /*Header*/
@@ -93,8 +92,25 @@ header {
     padding: 10px;
 }
 /*Portfolio*/
-.port-row{
-     
+.portfolio {
+    padding: 5% 0;
+    background-color: rgb(233, 231, 231);
+}
+.port-inner{
+    text-align: center;
+    padding: 60px;
+}
+.portfolio h2{
+    font-size: 72px;  
+}
+.portfolio h4{
+    color: $font-color-p;
+    font-family: $font-family-3;
+    font-size: 16px;
+    margin-bottom: 25px;
+}
+.portfolio .card{
+    padding:0 20px;
 }
 /*Footer*/
 .foot-container{
@@ -102,6 +118,7 @@ header {
 	width:100%;
 	height:60px;		
 	text-align: center; 
+    margin: 20px;
 }
 .foot-container li{
     list-style-type: none;
