--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,6 +95,7 @@ header {
 .portfolio {
     padding: 5% 0;
     background-color: rgb(233, 231, 231);
+    text-align: center;
 }
 .port-inner{
     text-align: center;
@@ -109,9 +110,10 @@ header {
     font-size: 16px;
     margin-bottom: 25px;
 }
-.portfolio .card{
-    padding:0 20px;
+.row .card{
+    margin: 20px;
 }
+
 /*Footer*/
 .foot-container{
     bottom: 96px;
@@ -146,5 +148,12 @@ header {
     .services .row{
     flex-direction: column;
     width:100%;
+    }
+    .services-title, .port-inner{
+        padding-left: 5%;
+    }
+    .port-inner h2{
+        text-align:left;
+        font-size: 60px;
     }
 }
